<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.eostek.rick.demo.designviewgroup.MainActivity">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="0dp"
                android:text="@string/activityone" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="0dp"
                android:text="@string/iconactivity" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button2"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="0dp"
                android:text="@string/videoactivity" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button3"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="0dp"
                android:text="@string/viewpageractivity" />
            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button4"
                android:text="@string/webview"/>

            <com.eostek.rick.demo.designviewgroup.view.SingleTouchView
                android:id="@+id/singletouchview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:controlLocation="right_top"
                app:degree="0"
                app:frameColor="#0022ff"
                app:scale="1"
                app:src="@mipmap/ic_launcher" />

        </RelativeLayout>
    </ScrollView>




</RelativeLayout>
